# RAG-MODEL

./: .gitignore  README.md  doc.ipynb  dockerfile  main.py  pyproject.toml  requirements.txt  ui.py
data/demo_files/: agentic_rag_guide.txt
data/text_files/: file1.txt
data/vector_store/65fd94e8-8eb8-4e6e-bea3-778e287d16f0/: index_metadata.pickle
pipeline/agent/: agentic.py
pipeline/embeddings/: embedding_manager.py
pipeline/ingestion/: pdf_loader.py
pipeline/llm/: groq_llm.py
pipeline/processing/: text_splitter.py
pipeline/retrieval/: retriever.py
pipeline/vectorstore/: chroma_store.py
research/: Untitled-2.py  doc.ipynb  faiss.index  faissRAG.ipynb  faiss_metadata.json
