[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.76",
    "pymupdf>=1.26.4",
    "pypdf>=6.0.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.2",
    "groq>=0.9.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.30.0",
    "python-docx>=1.1.0",
]
